--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,16 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+solc = "0.8.26"
+evm_version = 'paris'
+via_ir = false
+optimizer = true
+optimizer_runs = 999_999_999
 
+[fuzz]
+runs = 2077
+
+[invariant]
+runs = 2077
+depth = 27
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
